# pymdo

./: .gitignore  setup.cfg
pymdo/core/: discipline.py  variable.py
pymdo/mda/: factory.py  gauss_seidel.py  hybrid.py  jacobi.py  mda.py  newton.py  smart_mda.py
pymdo/mdo/: mdf.py  mdo.py
tests/mda/: D1.hdf5  D1.json  D2.hdf5  D2.json  mda_test.py
tests/sbj/: constants.py  functions.py  main.py
tests/sbj/cache/: mda.json
