[metadata]

name = pymdo

version = 0.0.8

author = Dimitrios Pallas

author_email = mc19054@mail.ntua.gr

url = https://github.com/dlmpal/pymdo.git

license = MIT License

description = A lightweight package for Multidisciplinary Analysis and Optimization

long_description = file: README.md

long_description_content_type = text/markdown

keywords= Optimization, MDAO, Multidisciplinary Analysis and Optimization

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy 
    scipy
    networkx
    h5py
    matplotlib